--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -33,7 +33,7 @@ Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez era
 ```python
 try:
   huts_egin_dezakeen_kodea
-exception:
+except:
   huts_egitean_gertatzen_dena
 ```
 
@@ -46,7 +46,7 @@ try:
   balioa = int (balioa)
   karratua = balioa* balioa
   print ("Karratua da:", karratua)
-exception:
+except:
   print ("Errorea datua bihurtzean!")
 ```
 
@@ -99,11 +99,11 @@ Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu alda
 
 ```python
 fitxategia = open("testua.txt", "r")
-lerroak = fitxategia.readline()
+lerroak = fitxategia.readlines()
 for lerroa in lerroak:
-  print (lerroa)
+  print (lerroa.strip())  # lerroaren amaieran dagoen \n karakterea kendu
 
-fitxategia.close ()
+fitxategia.close()
 ```
 
 ## JSON fitxategiak
@@ -157,7 +157,7 @@ Fitxategiak idazteko, prozesua antzekoa da, baina bi gauza egin behar ditugu:
 Kode honekin, testu-lerro pare bat idatziko ditugu fitxategian:
 
 ```python
-fitxategia = ireki("testua.txt", "w")
+fitxategia = open("testua.txt", "w")
 fitxategia.write("Idatzi lerro bat\n")
 fitxategia.write("Idatzi beste lerro bat\n")
 fitxategia.close()
@@ -344,12 +344,12 @@ class Menu:
 
 ```python
 import menu
-nireMenua = menua.Menu(["Erakutsi", "Kendu", "Irten"])
+nireMenua = menu.Menu(["Erakutsi", "Kendu", "Irten"])
 
 nireMenua.erakutsi()
 
-if nireMenua.aukeratu(1):
-    print("1. aukera badado menuan")
+if nireMenua.hautatu(1):
+    print("1. aukera badago menuan")
 else:
     print("1. aukera ez dago menu honetan")
 ```
@@ -399,13 +399,14 @@ class Fitxategia:
 
 ```python
 import fitxategia
+from datetime import date
 
-miFichero = fitxategia.Fichero("6.0.txt")
+nireFitxategia = fitxategia.Fitxategia("6.0.txt")
 
-print("Aurreko edukia: ", miFichero.leer())
+print("Aurreko edukia: ", nireFitxategia.irakurri())
 
-miFichero.escribir("Eduki aldatuta!!! " + str(date.today()))
-print("Edukia:", miFichero.leer())
+nireFitxategia.idatzi("Eduki aldatuta!!! " + str(date.today()))
+print("Edukia:", nireFitxategia.irakurri())
 ```
 
 Testu-fitxategia:
@@ -417,8 +418,8 @@ Horixe da gaur egungo edukia.
 Emaitza:
 
 ```console
-Aurreko edukia: Eduki aldatua!!! 2020-08-18
-Edukia: Edukia aldatuta!!! 2020-08-23
+Aurreko edukia: Eduki aldatua!!! 2024-08-18
+Edukia: Edukia aldatuta!!! 2024-08-23
 ```
 
 6.1 Ariketa
@@ -439,9 +440,9 @@ import json
 
 class Zerrenda:
     def __init__ (self, fitxategiIzena):
-        contenido = open(fitxategiIzena, "r")
-        self._datuak = json.load(contenido)
-        contenido.close()
+        edukia = open(fitxategiIzena, "r")
+        self._datuak = json.load(edukia)
+        edukia.close()
 
     def existitzenDa (self, izena):
         for datu in self._datuak:
@@ -471,19 +472,19 @@ class Zerrenda:
 ```python
 import zerrenda
 
-nire_zerrenda = zerrenda.inprimatu("4.json")
+nire_zerrenda = zerrenda.Zerrenda("6.1.json")
 
 badaude = nire_zerrenda.existitzenDa("eugene")
 if badaude:
     print("Dago!")
 
 nire_zerrenda.xehetu()
-nire_zerrenda.print()
+nire_zerrenda.inprimatu()
 
 badaude = nire_zerrenda.existitzenDa("eugene")
 if badaude:
     posizioa = nire_zerrenda.posizioa('eugene')
-    print("Dago!")
+    print("Badago!")
     print(posizioa)
 ```
 
@@ -534,47 +535,48 @@ Fitxategia: `zereginak.py`
 import json
 
 class Zereginak:
-  def __init__ (self):
-      fitxategia = open("zereginak.json", "r")
-      self._zereginak = json.load(fitxategia)
-      fitxategia.close()
+    def __init__ (self):
+        fitxategia = open("zereginak.json", "r")
+        self._zereginak = json.load(fitxategia)
+        fitxategia.close()
 
-  def sortu (self, id, tarea):
-      berria = { "id": id, "tarea": tarea };
-      self._zereginak.append(berria)
+    def sortu (self, id, zeregina):
+        berria = { "id": id, "zeregina": zeregina };
+        self._zereginak.append(berria)
 
-  def gorde (self):
-      fitxategia = open("zereginak.json", "w")
-      fitxategia.write(json.dumps(self._zereginak))
-      fitxategia.close()
+    def gorde (self):
+        fitxategia = open("zereginak.json", "w")
+        fitxategia.write(json.dumps(self._zereginak))
+        fitxategia.close()
 
-  def ezabatu(self, id):
-      self._zereginak = list(filter(lambda datua: datua["id"] != id, self._zereginak))
+    def ezabatu(self, id):
+        self._zereginak = list(filter(lambda datua: datua["id"] != id, self._zereginak))
 
-  def erakutsi (self):
-      emaitza = ""
-      for datua in self._zereginak:
-          emaitza += json.dumps(datua) + "\n"
+    def erakutsi (self):
+        emaitza = ""
+        for datua in self._zereginak:
+            emaitza += json.dumps(datua) + "\n"
 
-      return emaitza
+        return emaitza
 
 ```
 
 Fitxategia: `zereginak.json`:
 
-``javascript
+```javascript
 [
-"Go ikastea", "id": 3},
-{"Zeregina": "Rust ikertzea", "id": 5},
-"Zeregina": "Lo gehiago egin", "Id": 10}
-] ```
+    {"id": 3, "zeregina": "Go ikasi"},
+    {"id": 5, "zeregina": "Rust ikertu"},
+    {"id": 10, "zeregina": "Lo egin"}
+]
+```
 
 Fitxategia:
 
 ```python
 import zereginak
 
-nireZereginak = zereginak.Tareas()
+nireZereginak = zereginak.Zereginak()
 
 print(nireZereginak.erakutsi(), "\n---")
 
@@ -592,28 +594,28 @@ nireZereginak.gorde()
 Emaitza:
 
 ```console
-{"zeregina": "Go ikasi", "id": 3}
-{"zeregina": "Rust ikertu", "id": 5}
-{"zeregina": "Lo egin", "id": 10}
+{"id": 3, "zeregina": "Go ikasi"}
+{"id": 5, "zeregina": "Rust ikertu"}
+{"id": 10, "zeregina": "Lo egin"}
 
-- --
-{"zeregina": "Go ikasi", "id": 3}
-{"zeregina": "Rust ikertu", "id": 5}
-{"zeregina": "Lo egin", "id": 10}
-{"zeregina": "Jan", "id": 2}
+---
+{"id": 3, "zeregina": "Go ikasi"}
+{"id": 5, "zeregina": "Rust ikertu"}
+{"id": 10, "zeregina": "Lo egin"}
+{"id": 2, "zeregina": "Gehiago ikasi"}
 
-- --
-{"zeregina": "Go ikasi", "id": 3}
-{"zeregina": "Rust ikertu", "id": 5}
-{"zeregina": "Lo egin", "id": 10}
+---
+{"id": 3, "zeregina": "Go ikasi"}
+{"id": 5, "zeregina": "Rust ikertu"}
+{"id": 10, "zeregina": "Lo egin"}
 
-- --
-{"zeregina": "Go ikasi", "id": 3}
-{"zeregina": "Rust ikertu", "id": 5}
-{"zeregina": "Lo egin", "id": 10}
-{"zeregina": "Irakurri", "Id": 66}
+---
+{"id": 3, "zeregina": "Go ikasi"}
+{"id": 5, "zeregina": "Rust ikertu"}
+{"id": 10, "zeregina": "Lo egin"}
+{"id": 66, "zeregina": "Irakurri"}
 
-- --
+---
 ```
 
 6.3 Ariketa
@@ -668,21 +670,21 @@ import json
 import jokalaria
 
 class Taldea:
-  def karga(self):
-      edukia = open("./jokalariak.json")
-      jokalariak = json.load(edukia)
-      print("Kargatuta:", jokalariak)
-      self._jokalariak = []
-      for j in jokalariak:
-          self._jokalariak.append(jokalaria.Jokalaria(j["izena"], j["zenbakia"]))
+    def karga(self):
+        edukia = open("./jokalariak.json")
+        jokalariak = json.load(edukia)
+        print("Kargatuta:", jokalariak)
+        self._jokalariak = []
+        for j in jokalariak:
+            self._jokalariak.append(jokalaria.Jokalaria(j["izena"], j["zenbakia"]))
 
-  def fitxaketa(self, izena, dorsala):
-      fitxategiBerria = jokalaria.Jokalaria(izena, dorsala)
-      self._jokalariak.append(fitxategiBerria)
+    def fitxaketa(self, izena, dorsala):
+        fitxategiBerria = jokalaria.Jokalaria(izena, dorsala)
+        self._jokalariak.append(fitxategiBerria)
 
-  def inprimatu(self):
-      for jokalaria in self._jokalariak:
-          print(jokalaria.toString())
+    def inprimatu(self):
+        for jokalaria in self._jokalariak:
+            print(jokalaria.toString())
 ```
 
 `jokalariak.json` jokalarien fitxategia:
@@ -707,7 +709,7 @@ import taldea
 
 nireTaldea = taldea.Taldea()
 
-nireTaldea.kargatu()
+nireTaldea.karga()
 nireTaldea.inprimatu()
 nireTaldea.fitxaketa("Gento", 11)
 nireTaldea.inprimatu()
