--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -1,18 +1,22 @@
 
-Liburu hau programatzen ikasteko gida bat da. Horretarako, ahalik eta tresnarik sinpleenak erabiltzen ditu, Python bezalako lengoai erraz eta erabilgarria eta programak lehen kapitulutik idazten hasteko aukera. Errazenetik hasi eta pixkanaka teknika berriak sartzen dira.
-Baina zerbait argi izan behar duzu. Irakurtzera mugatzen bazara, baliteke ideiaren batekin geratzea, baina benetan programatzen **ez duzu ikasiko** . Pro batean bihurtzeko, ordenagailua aurrean izan behar duzu eta hemen azaltzen dizuguna praktikatu. Proposatutako ariketak egiten, idazten, probatzen eta zure gustura hobetzen saiatu behar duzu. Izan ere, **programatzen ikasten da** programazioa.
-Liburu hau, ebatzitako ariketak eta web orri bat jartzen ditugu zure eskura. Bertan sartu besterik ez duzu egin behar, eta proposatzen dizkizugun praktikekin jolastu ahal izango duzu.
+Liburu hau programatzen ikasteko gida bat da. Horretarako, ahalik eta tresnarik sinpleenak erabiltzen ditu:
+- Python bezalako lengoai erraza.
+- Hasieratik programak idazteko ariketak.
 
-# Mukientzako programazioa
+Adibide errazenetik hasi eta pixkanaka teknika berriak sartzen dira.
+Baina zerbait argi izan behar duzu. Irakurtzera mugatzen bazara, baliteke ideiaren batekin geratzea, baina benetan programatzen **ez duzu ikasiko** . _Pro_ bat izateko, ordenagailua aurrean izan behar duzu eta hemen azaltzen dizuguna praktikatu. Proposatutako ariketak egiten, idazten, probatzen eta zure gustura hobetzen saiatu behar duzu. Izan ere, programazioa, **programatzen ikasten da** .
+Horretarako, liburu hau, ebatzitako ariketak eta web orri bat jartzen ditugu zure eskura. Bertan sartu besterik ez duzu egin behar, eta proposatzen dizkizugun praktikekin jolastu ahal izango duzu.
+
+# Zer da programazioa?
 
 Ordenagailuak azkarrak dira eta memoria izugarria dute: segundoko milioika erakigeta exekutatzeko eta datu kopuru imajinaezinak kudeatzeko gai diren makinak dira. Baina horrek ez du esan nahi adimentsuak direnik. Berez ez dakite ezer egiten. Ordenagailu bat, edo *tableta* bat, mugikor bat,
-egin zerbait zehatza, programa bat exekutatu behar dute. Eta programa bat programatzaileek idatzitako agindu multzo bat da.
+edozer gauza egiteko, programa bat exekutatu behar dute. Eta programa bat programatzaileek idatzitako agindu multzo bat da.
 
-Programazioaren alderdi interesgarriena da makinaren kontrola har dezakegula, hark guk nahi duguna egin dezan: agindu sinple batetik hasi eta nabigatzaile edo joko oso konplexuak programatzeraino. Programazioa zoragarria da, zergatik? nahi duzuna sor dezakezulako, zure irudimena eta trebetasunak beste mugarik gabe.
+Programazioaren alderdi interesgarriena da makinaren kontrola har dezakegula, hark guk nahi duguna egin dezan: agindu sinple batetik hasi eta nabigatzaile edo joko oso konplexuak programatzeraino. Programazioa zoragarria da; zergatik? nahi duzuna sor dezakezulako. Muga bakarrak zure irudimena eta trebetasunak izango dura
 
-Baina zein hizkuntzatan komunikatu gaitezke ordenagailuekin? Horietako asko daude. Barnean, ordenagailuak lengoai bitarra erabiltzen du, hau da, zerbait egiteko interpretatzeko gai den zero eta bat zenbakien sekuentzia. Hala ere, programazio-lana errazteko, lengoai sinpleagoak daude, pertsonen hizkuntzaren antz handia dutenak.
+Baina zein hizkuntzatan komunikatu gaitezke ordenagailuekin? Horietako asko daude. Barnean, ordenagailuak lengoai bitarra erabiltzen du, hau da, interpretatzeko gai den zero eta bat zenbakien sekuentzia: 00100100111011001... Hala ere, programazio lana errazteko, lengoai sinpleagoak daude, pertsonen hizkuntzaren antz handia dutenak.
 
-Python lengoaia horietako bat da, eta alde on asko ditu: erraza da, ikasteko oso erraza, edozer egiteko aukera ematen du, liburutegi ugari ditu eta, gainera, modu profesionalean erabiltzen da. Liburu honetan Python erabiliz programatzen ikasiko duzu. Pixkanaka, lengoaiak eskaintzen dizkizun tresna berriak ezagutuko dituzu, programa konplexuagoak sortzen ikasteko.
+Python lengoaia horietako bat da, eta alde on asko ditu: sinplea da, ikasteko oso erraza, edozer egiteko aukera ematen du, liburutegi ugari ditu eta, gainera, modu profesionalean erabiltzen da. Liburu honetan Python erabiliz programatzen ikasiko duzu. Pixkanaka, lengoaiak eskaintzen dizkizun tresna berriak ezagutuko dituzu, programa konplexuagoak sortzen ikasteko.
 
 Zer behar duzu oraintxe bertan hasteko? Nabigatzaile bat: Chrome, Firefox, etab. Lehenengo kapitulutik programatzen hasiko gara. Programatzen ikasteko modurik onena... programatzea da! Ez da beldurrik izan behar, eta, gainera, dibertigarriena da. Beraz, nahikoa da. Pasa hurrengo kapitulura zure lehen programa idazteko!
 
@@ -36,7 +40,7 @@ Hortik, `Start coding` sakatu
 
 Eta hautatu **Python** lengoaia:
 
-![Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mucos/master/book/images/02.png)
+![Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/02.png)
 
 Behin hori eginda, programazio ingurunea kargatuko da:
 
@@ -48,7 +52,7 @@ Behin hori eginda, programazio ingurunea kargatuko da:
 
 Repl.it. gunean izen ematea gomendatzen dizugu. Horrela, egiten dituzun programa guztiak gordeta eta lokalizatuta izango dituzu.
 
-Online aukerak:
+Beste _online_ aukerak:
 
 - https://paiza.io/es
 - https://www.programiz.com/python-programming/online-compiler /
@@ -62,7 +66,7 @@ Honela egiten da:
 print ("Kaixo mundua!")
 ```
 
-Hori exekutatu edo egikaritzen baduzu (Run), pantailatik horrelako zerbait ikusi beharko zenuke:
+Hori exekutatu edo egikaritzen baduzu (`Run`), pantailatik horrelako zerbait ikusi beharko zenuke:
 
 ```console
 Kaixo mundua!
@@ -70,7 +74,7 @@ Kaixo mundua!
 
 `print` Python lengoaiaren funtzio bat da, mezuak pantailan erakusteko aukera ematen diguna, eta askotan erabiliko dugu mezuak, emaitzak eta abar erakusteko.
 
-KONTUZ! Kapitulu honetakoak bezalako programa oso sinpleetan, saiatu ez jartzen tarterik programaren jarraibideen aurretik, edo Pythonek errore bat emango du:
+KONTUZ! Kapitulu honetakoak bezalako programa oso sinpleetan, saiatu ez jartzen tarterik programaren aginduen aurretik, edo Pythonek errore bat emango du:
 
 ```python
    print ("Kaixo mundua!")
@@ -86,7 +90,7 @@ IndentationError: unexpected indent
 
 Python-en espazioak edo tabulazioak gehitzen dira kodea beste bloke batzuen barruan dagoela adierazteko, pixkanaka ikusiko duzun bezala. Oraingoz, kapitulu honetarako, hasi zure kodea lerroaren hasieratik.
 
-Zure txanda da! 0.0 ariketa
+Zure txanda da! 0.0 Ariketa
 
 Idatzi zure izena pantaila bidez erakusten duen programa bat.
 
@@ -101,14 +105,14 @@ Kaixo, Ada naiz.
 
 ## Iruzkinak
 
-Programa batean, iruzkinak edo komentarioak jar daitezke. Exekutatzen ez den testua da, ordenagailuak erabat ezagutzen ez duena. Zertarako erabiltzen da? Oro har, iruzkinak programaren zati jakin batzuk azaltzeko erabiltzen dira.
+Programa batean, iruzkinak edo komentarioak jar daitezke. Exekutatzen ez den testua da, ordenagailuarentzat existituko ez balira bezala. Zertarako erabiltzen da? Oro har, iruzkinak programaren zati jakin batzuk azaltzeko erabiltzen dira.
 
 ```python
-#Programa honek dio Kaixo
+#Programa honek Kaixo dio
 print ("Kaixo")
 ```
 
-Pythonek ez dio jaramonik egiten iruzkinari, eta kasu honeta pantailatik "Kaixo" erakutsiko du, besterik ez.
+Pythonek ez dio jaramonik egiten iruzkinari, eta kasu honeta pantailatik `"Kaixo"` erakutsiko du, besterik ez.
 Hainbat lerroko iruzkinak ere egin daitezke:
 
 ```python
@@ -118,13 +122,13 @@ ADAk sortua
 eta Nekok berrikusia
 ""
 ```
-Batzutan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
+Batzuetan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
 
 Oharra: oro har, iruzkinak saihestu behar dituzu. Programatzaile on batek programa ulerterrazak idazten saiatu behar du, inolako iruzkinik edo azalpenik behar ez dutenak.
 
 # Aldagaiak
 
-Aldagaiek datuak gordetzeko balio dute. Ordenagailu programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu horretan guztian beharrezkoa da datuak gordetzea, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu edukiontziak bezalakoak dira. Sukaldaritzan erabiltzen diren edalontziak, platerak eta iturriak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait goxoa lortzen da.
+Aldagaiek datuak gordetzeko balio dute. Programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu guztian zehar datuak gordetzea beharrezkoa da, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu edukiontziak bezalakoak dira. Sukaldaritzan erabiltzen diren edalontziak eta platerak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait goxoa lortzen da.
 
 Python aldagai bat definitzeko, nahikoa da bere izena adieraztea eta balioren bat ematea. Adibidez:
 
@@ -132,7 +136,7 @@ Python aldagai bat definitzeko, nahikoa da bere izena adieraztea eta balioren ba
 izena = "Ada"
 ```
 
-"Ada" balioa duen aldagai bat sortu berri dugu. "Ada" datu bat da, eta testu motakoa da. Orain, aldagai horren balioa bistara dezakegu pantailan:
+`"Ada"` balioa duen aldagai bat sortu berri dugu. `"Ada"` datu bat da, eta testu motakoa da. Orain, aldagai horren balioa bistara dezakegu pantailan:
 
 ```python
 print(izena)
@@ -182,9 +186,9 @@ Kaixo, Bug dut izena.
 Bug naiz, 10 urte ditut.
 ```
 
-Orain zu! 0.1 ariketa
+Orain zu! 0.1 Ariketa
 
-Sortu bi aldagai izen eta adina, eta erakutsi haien balioa pantailan.
+Sortu bi aldagai `izena` eta `adina`, eta erakutsi haien balioa pantailan.
 
 ```python
 izena = "Ada"
@@ -203,7 +207,7 @@ Zure izena Ada da eta 14 urte dituzu.
 
 ## Formatodun testua
 
-Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, "f" letra eta giltzen arteko aldagaiak daude:
+Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, `f` letra eta giltzen arteko aldagaiak daude:
 
 ```python
 izena = "Bug"
@@ -223,7 +227,7 @@ KONTUZ, aukera hau Python 3.6tik bakarrik dago eskuragarri
 
 ## Ehunekoa ordeztea
 
-Aldagaiak pantaila bidez erakusteko beste aukera bat. %s elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
+Aldagaiak pantaila bidez erakusteko beste aukera bat. `%s` elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
 
 ```python
 print ("Kaixo, %s dut izena" % izena)
@@ -252,11 +256,11 @@ Kaixo, Neko dut izena eta 5 urte ditut.
 
 # Datu-motak
 
-Datuak! Programek lantzen duten osagaiak dira. Gure programek eraldatzen duten elementuak dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu. Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke. Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
+Datuak! Programek lantzen duten osagaiak dira. Gure programek eraldatzen dituzten elementuak dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu. Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke. Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
 
-Programazioa sukaldaritzarekin alderatzen badugu, orduan azukrea, irina eta arraultzak datuak izango lirateke, ontziak aldakorrak izango lirateke: tarta beste datu bat izango litzateke, emaitza eta errezeta programa izango litzateke.
+Programazioa sukaldaritzarekin alderatzen badugu, orduan azukrea, irina eta arraultzak datuak izango lirateke, ontziak aldagaiak izango lirateke: tarta beste datu bat izango litzateke, emaitza eta errezeta programa izango litzateke.
 
-Nola daki Pythonek zein datu mota darabilen? Ez dago esan beharrik, beste lengoai batzuetan bezala. Horregatik Python lengoai sinpleagoa eta malguagoa da. Baina ezin izango dugu nahi duguna egin datuekin.
+Nola daki Pythonek zein datu mota darabilen? Ez dago esan beharrik, beste lengoai batzuetan bezala. Horregatik Python lengoai sinpleagoa eta malguagoa da. Baina, kontuz! ezin izango dugu nahi duguna egin datuekin.
 
 Jarraian, oinarrizko datu motak ikusiko ditugu.
 
@@ -274,7 +278,7 @@ adina = 12
 
 - Hamartarrekin:
 
-Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `.`, erabiltzen dira. Baliteke eskolako matematika klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `.`, erabili behar dugu.
+Zenbaki hamartarretan, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `.`, erabiltzen dira. Baliteke eskolako matematika klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `.`, erabili behar dugu.
 
 ```python
 pisua = 34.67
@@ -283,7 +287,7 @@ prezioa = 242.9943
 
 - Negatiboak:
 
-0 zenbaki txikiagoak marratxo batekin adierazten dira: -4, -5, -3.1415,...
+0 zenbaki txikiagoak gidoia edo marratxo batekin adierazten dira: -4, -5, -3.1415,...
 
 ```python
 nota = -5
@@ -333,7 +337,7 @@ Horrek tabulazio bat (hainbat espazio) gehitzen dio testuari, pantaila bidez era
 ```python
 esaldia = "Izena\tAbizena\tAdina"
 ```
-honela erakutsiko da:
+Honela erakutsiko da:
 
 ```console
 Izena Abizena Adina
@@ -372,14 +376,14 @@ zenbakiak = [12, 16, 30, 0, 22, 1, 1, 12]
 egiak = [True, False, False, True]
 ```
 
-Zerrendako balio zehatz bat adierazteko, interesatzen zaigun zerrendako elementuaren posizioa adierazi behar dugu, 0tik hasita:
+Zerrendako balio zehatz bat adierazteko, interesatzen zaigun zerrendako elementuaren posizioa adierazi behar dugu, `0`tik hasita:
 
 ```python
 izenak = ["Ada", "Neko", "Bug"]
 print (izenak [0]) # "Ada"
 ```
 
-Izendapenen zerrendaren kasuan, posizio posibleak 0, 1 eta 2 izango dira.
+`izenak` zerrendaren kasuan, posizio posibleak 0, 1 eta 2 izango dira.
 Baina kontuz! Posizio handiegia pasatzen baduzu, programa akats batekin amaituko da:
 
 ```python
@@ -392,14 +396,14 @@ Aurrerago itzuliko gara zerrendetara eta beste egitura batzuetara.
 ## None
 
 Arraroa dirudien arren, programetan batzuetan hutsa edo ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
-Badago hitz bat Python-en hutsa irudikatzeko aukera ematen diguna, eta hori da:
+Badago hitz bat Python-en hutsa irudikatzeko aukera ematen diguna, eta hori da `None`:
 
 ```python
 hasierakoBalioa = None
 datua = None
 ```
 
-Egia esan, ez da aldagaiak sortzeko erabiltzen. `None` balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
+Egia esan, ez da aldagaiak sortzeko erabiltzen. `None` balio bat adierazten du egoera berezietan. Adibidez, fitxategi huts bat irakurtzen denean edo erabiltzaileak datu bat ematen ez digunean.
 
 0.2 Ariketa
 
@@ -434,7 +438,7 @@ null
 
 # Datuak irakurtzen
 
-Programa batek zerbait egin ahal izateko, askotan erabiltzaileak datu bat sartu behar du. Adibidez, programa batek gure izenak zenbat letra dituen edo gure urtebetetzerako zenbat falta den esatea nahi badugu, lehenik eta behin datu bat eskatu beharko du programak.
+Programa batek zerbait egin ahal izateko, askotan erabiltzaileak datu bat sartu behar du. Adibidez, programa batek gure izenak zenbat letra dituen edo gure urtebetetzerako zenbat falta den esatea nahi badugu, programak lehenik eta behin datu bat eskatu beharko du.
 
 Oraingoz ikusten ari garenak bezalako oinarrizko programek kontsola erabiltzen dute exekutatzeko. Pantaila beltz horietan idatzitako aginduak jartzen dira ;)
 
@@ -449,14 +453,14 @@ print("Kaixo, zer moduz zaude ", izena)
 Pantailan honako hau ikusiko zenuke:
 
 ```console
-Esadazu zure izena:
+Sartu zure izena:
 ```
 
-Input funtzioaren ondorioz, pantailan agertzen da "Zure izena adierazi:" mezua. Era berean, programa gelditu egiten da, erabiltzaileak zerbait idatzi arte.
-Erabiltzaileak "Rosa" idazten badu, honela ikusiko da:
+`input` funtzioaren ondorioz, pantailan agertzen da `Sartu zure izena:` mezua. Era berean, programa gelditu egiten da, erabiltzaileak zerbait idatzi arte.
+Erabiltzaileak `Rosa` idazten badu, honela ikusiko da:
 
 ```console
-Esadazu zure izena: Rosa
+Sartu zure izena: Rosa
 Kaixo, zer moduz zaude  Rosa
 ```
 
@@ -481,7 +485,7 @@ Kaixo, zer moduz zaude Juan
 
 ## Kontuz datuekin
 
-Erabiltzaileak zerbait idazteko, **input funtzioa erabiltzen duzun bakoitzean** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
+Erabiltzaileak zerbait idazteko, **`input` funtzioa erabiltzen duzun bakoitzean** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
 
 ```python
 balioa = input ("Eman zenbaki bat:")
@@ -492,11 +496,11 @@ print(bikoitza)
 Erabiltzaileak `"4"` bezalako zenbaki bat sartuz gero, emaitza hau izango litzateke:
 
 ```console
-Emadazu zenbaki bat: 4
+Eman zenbaki bat: 4
 44
 ```
 
-`4 + 4` gehitu eta `8` erakutsi beharrean, `4` eta `4` batu egin ditu, izan ere, `"4"` testua irakurri duenean," 4 " testua da.
+`4 + 4` gehitu eta `8` erakutsi beharrean, `4` eta `4` elkartu egin ditu, izan ere, `4` irakurri duenean, `4` testua da: `"4"`.
 
 Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihurtzeko: `int()`
 
@@ -515,10 +519,10 @@ bikoitza = balioa + balioa
 print(bikoitza)
 ```
 
-Edo, are gehiago, input egiten den bitartean:
+Edo, are gehiago, `input` egiten den momentuan bihurtu dezakegu:
 
 ```python
-balioa = int(input("Emaidazu zenbaki bat:")
+balioa = int(input("Eman zenbaki bat:")
 bikoitza = balioa + balioa
 print(bikoitza)
 ```
@@ -532,7 +536,7 @@ Eman zenbaki bat: 4
 
 0.4 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu 10. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu `10`. Jarraian, emaitza kontsola bidez erakutsi behar duzu. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -550,8 +554,8 @@ Batura hau da: 42
 
 ## Beste bihurketa batzuk
 
-Python lengoaian aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa gauzatzerakoan.
-Adibidez, zenbaki bat duen aldagai bat badugu eta testu batean kateatu nahi badugu, errore bat lortuko genuke:
+Python lengoaian aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa exekutatzerakoan.
+Adibidez, zenbaki bat duen aldagai bat badugu eta testu batean kateatu nahi badugu, errore bat jasoko genuke:
 
 ```python
 balioa = 66
@@ -564,14 +568,14 @@ Errorea horrelako zerbait izango litzateke:
 TypeError: can only concatenate str (not "int") to str
 ```
 
-Hori saihesteko, testu mota behartu behar dugu `str ()` erabiliz:
+Hori saihesteko, testu mota behartu behar dugu `str()` erabiliz:
 
 ```python
 balioa = 66
 testua = "Nire adina da " + str(balioa)
 ```
 
-Beraz, batzuetan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
+Beraz, batzutan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
 
 - `str()`: balio bat testu bihurtzen du. · `"5"` itzuliko luke.
 - `int()`: balio bat zenbaki oso bihurtzen du.
@@ -582,7 +586,7 @@ KONTUZ! Bateragarria ez den balio bat bihurtzen saiatzen bazara, programak huts 
 
 # Eragileak
 
-Programek zenbakiekin kalkuluak egin behar dituzte, datuak prozesatu, balioen arabera erabakiak hartu. Horretarako operadore edo eragileak behar ditugu.
+Programek zenbakiekin kalkuluak egin behar dituzte, baita datuak prozesatu eta balioen arabera erabakiak hartu ere. Horretarako operadore edo eragileak behar ditugu.
 
 ## Eragile aritmetikoak
 
@@ -593,7 +597,7 @@ txikleak = 4
 txikleak = txikleak + 2
 ```
 
-Programaren kalkuluen arabera, 4 txikle edukitzetik 6 izatera igaro zara.
+Programaren kalkuluen arabera, 4 txikle edukitzetik 6 izatera pasa zara.
 Hauek dira programazioko oinarrizko eragiketak:
 
 - Batuketa: `+`
@@ -655,7 +659,7 @@ Emaitza hauxe izango da:
 ```
 
 
-Berreketa zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Pythonen operadore honekin egin daiteke eragiketa hori:
+Berreketa zenbaki bat bere buruarekin hainbat aldiz biderkatzearen emaitza da. Pythonen operadore honekin egin daiteke eragiketa hori:
 
 ```python
 balioa = 2
@@ -795,9 +799,10 @@ Desberdinak dira? False
 
 ## Eragile boolearrak
 
-Eragile boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True` ala `False`.
+Eragile boolearrek `True` ala `False` balio boolearrekin eragiketak egiteko aukera ematen digute.
 
 ## and
+
 Operadore horrek `True` itzuliko du, baldin eta bi operadoreak ere `True` badira:
 
 ```python
@@ -818,7 +823,7 @@ Aukera guztiak laburbiltzeko, **egiaren taula** delakoa honako hau izango litzat
 
 0.8 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
 ```python
 balioa = input("Zenbaki bat sartu: ")
@@ -923,13 +928,13 @@ if adina > 17 and adina < (jubilazioAdina + 1):
   print ("Lan egin dezakezu")
 ```
 
-Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren baldintzen barruan erabiltzen dira.
+Oro har, konparaketa eta boolear eragileak baldintzapeko blokeetan, begiztetan eta abarren baldintzen barruan erabiltzen dira. Aurrerago ikusiko dugu.
 
 ## Proposatutako ariketak
 
 0.0 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
+Idatzi erabiltzaileari zenbaki bat eskatu eta `7` biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -963,6 +968,7 @@ Zatiketa da: 30.0
 ```
 
 0.2 Ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatu eta . modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
@@ -1018,7 +1024,7 @@ Kenketa da: 1
 
 0.5 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, % 2 eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta kenketa 0 bada, zenbaki hori bikoitia dela esan nahi du.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, `% 2` eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta ondarra 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -1057,7 +1063,7 @@ Positiboa da? True
 
 0.7 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
