--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -2,11 +2,11 @@
 
 Askotan, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
 
-Baldintzak programazio egiturak dira, eta aukera ematen digute kode bat baldintza batzuk betetzen direnean bakarrik exekutatzeko.
+Baldintzak programazio egiturak dira. Egitura hauek aukera ematen digute kode bat exekutatzea soilik baldintza batzuk betetzen direnean.
 
 ## if
 
-Baldintza bat egiteko egiturarik sinpleena `if` da, eta itxura hau du:
+Baldintza bat egiteko egiturarik sinpleena `if` bat da, eta itxura hau du:
 
 ```python
 if *baldintza*:
@@ -17,7 +17,7 @@ if *baldintza*:
 
 Ikus dezakezunez, baldintza batekin hasten da. Baldintza **boolear batek itzultzen duen edozein adierazpen izan daiteke**, hau da, `True` ala `False`, egiazkoa ala faltsua. Hala bada, bete egingo dira jarraibideak, eta, bestela, salto egingo da.
 
-Adibidez, programa honek, balioa negatiboa bada, "Balioa 0 baino txikiagoa da" adieraziko du:
+Adibidez, programa honek, balioa negatiboa bada, "Balioa 0 baino txikiagoa da" pantailaratuko du:
 
 ```python
 balioa = -2
@@ -28,7 +28,7 @@ if balioa < 0:
 print ("Programaren amaiera")
 ```
 
-Honela geratuko litzateke:
+Honela ikusiko litzateke:
 
 ```console
 Balioa 0 baino txikiagoa da
@@ -46,21 +46,21 @@ if balioa < 0:
 print ("Programaren amaiera")
 ```
 
-Honela geratuko litzateke:
+Honela ikusiko litzateke:
 
 ```console
 Programaren amaiera
 ```
 
 Oharra:
-Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "if" aren barruko jarraibideak espazio batzuen edo tabulazio baten atzean daude. Python programazio lengoaiaren berezitasun bat da hori: edozein bloketan, hala nola baldintza batean, begizta batean, funtzio batean, haren edukiak tabulatuta egon behar du. Espazio horrek irakurketa errazten du eta programa baten egitura erraz ezagutzea ahalbidetzen du beste programatzaile batzuentzat. Baita zuretzat ere, zure programa bada.
+Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: `if` aren barruko aginduak espazio batzuen edo tabulazio baten atzean daude. Python programazio lengoaiaren berezitasun bat da hori: edozein bloketan, hala nola baldintza batean, begizta batean, funtzio batean, haren edukiak tabulatuta egon behar du. Espazio horrek irakurketa errazten du eta programa baten egitura erraz ezagutzea ahalbidetzen du beste programatzaile batzuentzat. Baita zuretzat ere, zure programa bada.
 
 Programak konplexuagoak egiten diren heinean, baldintzak eta beste edozein kontrol egiturak kabiatuko ditugu, eta espazio horiekin programaren egitura jarraitzea erreztuko dugu.
 
 
 1.0 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. Beraz negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. Beraz "negatiboa da", mezu bat erakutsi behar duzu kontsola bidez.
 
 ```python
 balioa = input("Idatzi zenbaki bat: ")
@@ -79,7 +79,7 @@ Negatiboa da
 
 ## if else
 `if`arekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatzen dena. Baina zer gertatzen da programak baldintza baten arabera gauza bat ala bestea egitea nahi badugu?
-"Beste" aukera sartu ahal izateko, `if-else` egitura bat erabiltzen dugu:
+"Beste" aukera sartu ahal izateko, `if-else` egitura erabiltzen dugu:
 
 ```python
 if *baldintza*:
@@ -105,7 +105,7 @@ Esadazu zure izena: Ada
 Kaixo Ada
 ```
 
-Baina erabiltzaileak ezer idatzi gabe `enter` tekla sakatu besterik ez badu egiten:
+Baina erabiltzaileak ezer idatzi gabe `enter` tekla sakatu besterik ez badu egiten, hurrengoa ikusiko genuke:
 
 ```console
 Esadazu zure izena:
@@ -134,7 +134,7 @@ Ez dut ulertzen.
 
 ## if elif else
 
-Bada beste egitura bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, if-elif-else egitura dago:
+Bada beste egitura bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, `if-elif-else` egitura dago:
 
 ```python
 if *baldintza1*:
@@ -216,7 +216,7 @@ Sartu beste zenbaki bat: 10
 ## Proposatutako ariketak
 
 1.0 Ariketa
-Sortu programa bat erabiltzaileari bi balio oso eskatuko dizkiona non pantaila bidez erakutsiko duena lehenengoa bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu (`%`) haien artean: 0 bada, multiploa izango da.
+Sortu programa bat erabiltzaileari bi zenbaki oso eskatuko dizkiona. Gero pantaila bidez erakutsi ea lehenengo zenbakia bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu (`%`) haien artean: 0 bada, multiploa izango da.
 
 ```python
 balio1 = input("Sartu zenbaki bat: ")
@@ -306,11 +306,11 @@ Sartu urteko hilabete bat: Ekaina
 30 egun ditu
 ```
 
-Hobespena: saiatu programa motzago egiten `or` operadorerik erabiliz.
+Hobespena: saiatu programa motzago egiten `or` eragilea erabiliz.
 
 1.3 Ariketa
 
-Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den erakusten duena. Bestela, negatiboa, bakoitia edo biak diren adierazi behar duzu.
+Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den ala ez erakusten duena. Bestela, negatiboa edo bakoitia den adierazi behar duzu.
 
 ```python
 zenbaki = input("Sartu zenbaki bat: ")
@@ -339,7 +339,7 @@ Sortu programa bat erabiltzaileari kilotan duen pisua eta zentimetrotan duen alt
 
 - GMI 16 baino txikiagoa bada, "Beharrezkoa da gehiago jatea" mezua agertuko da.
 - GMI (> =) 16 eta 25 (<) artean badago, "Ondo zaude" mezua agertuko da.
-- GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gorputz gordina duzu".
+- GMI 25 eta 30 artean badago (<), "Gorputz gordina duzu" mezua agertuko da.
 - GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate arazoa duzu".
 
 ```python
@@ -377,7 +377,7 @@ Ondo zaude
 Sortu erabiltzaileari jokalari dortsal bat eskatzen dion programa bat eta ondorengoa egin: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
 
 - Erabiltzaileak 1 tekleatu badu, testua `"Atezaina"` izango da
-- Erabiltzaileak 1 eta 5 artean tekleatu badu, testua `"Defentsa"` izango da.
+- Erabiltzaileak 2 eta 5 artean tekleatu badu, testua `"Defentsa"` izango da.
 - Erabiltzaileak 6 eta 8 artean edo 11 tekleatu badu, testua `"Erdilaria"` izango da.
 - Erabiltzaileak 9 tekleatu badu, testua `"Aurrelaria"` izango da.
 - Beste edozein aukeratarako, testua `"Edozein"` izango da.
